--- a/src/main/resources/templates/customer/plp.html
+++ b/src/main/resources/templates/customer/plp.html
@@ -94,7 +94,7 @@
         <div class="product">
             <h1 class="product-head">Mens Top-Wears</h1>
             <div class="product-container">
-                <div class="product-card" data-th-each="product : ${products}">
+                <div class="product-card" data-th-each="product : ${category.products}">
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="https://rukminim2.flixcart.com/image/612/612/xif0q/shirt/l/p/g/xl-mens-staylist-chex-shirt-dbex-original-imah3hj4wgjq98dz.jpeg?q=70"
