admin page Pop-Up form inserted as demo performance

--- a/src/main/resources/templates/customer/admin.html
+++ b/src/main/resources/templates/customer/admin.html
@@ -92,24 +92,30 @@
         <div id="container">
             <div class="addCategory">
                 <label for="addCategory">Add Category</label>
-                <input type="text" placeholder="Enter category">
+                <input class="inputbox" type="text" placeholder="Enter category">
             </div>
 
             <div class="addProduct">
                 <label for="addProduct">Add Product</label>
-                <input type="text" placeholder="Add your Product">
+                <input class="inputbox" type="text" placeholder="Add your Product">
             </div>
 
-            <div class="Product Description">
+            <div class="ProductImage">
+                <label for="ProductImage">Product Image</label>
+                <input class="inputbox" type="file" placeholder="Product Image">
+            </div>
+
+            <div class="ProductDescription">
                 <label for="ProductDescription">Product Description</label>
-                <input type="text" placeholder="Product Description">
+                <input class="inputbox" type="text" placeholder="Product Description">
+            </div>
+            <div>
+                <button id="button1">Submit</button>
             </div>
             </div>
         </div>
     </form>
-    <div class="button1">
-        <button id="btn1">Submit</button>
-    </div>
+    
 
     <script src="/JavaScript/admin.js"></script>
 </body>
