--- a/src/main/resources/static/style/admin.css
+++ b/src/main/resources/static/style/admin.css
@@ -97,6 +97,47 @@ th {
 #form{
     display:none;
 }
+
 #container{
-    //display:block;
+    display:flex;
+    flex-direction: column;
+    position:absolute;
+    left:40%;
+    top:20%;
+    background-color:rgba(0,0,0,0.8);
+    height:70%;
+    width:28%;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-items:center;
+    gap:20px;
+    border-radius:10px;
+}
+
+#container div{
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+label{
+    color:#EFEFEF;
+    font-size:24px;
+}
+
+.inputbox{
+    display:block;
+    margin-top:5px;
+    margin-bottom:1rem;
+    position:relative;
+    width:19rem;
+    height:2.5rem;
+    border-radius:10px;
+}
+
+#button1{
+   width:8rem;
+   height:2.5rem;
+   border-radius:5px;
+   cursor: pointer;
 }
