fragment added to home page

--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fash-inn</title>
     <link rel="stylesheet" href="/style/customer.home.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-</head>
+</head> -->
+<!-- <head data-th-replace="~{fragment/common :: head}"></head>
 
 <body>
-    <div class="nav-content">
+    <link rel="stylesheet" href="../../static/style/customer.home.css">
+    <nav data-th-replace="~{fragment/common :: nav}"></nav> -->
+    
+     <!-- <div class="nav-content">
         <div class="navbar">
             <div class="logo">
                 <a href="#"><img src="/images/logo.png" alt="logo" class="logo-img"></a>
@@ -35,28 +39,8 @@
                 <li class="lists-1"><a href="#"> &#9825 Wishlists</a></li>
                 <li class="lists-1"><a href="http://localhost:1211/customer/cart">&#x1F6D2 Cart</a></li>
             </ul>
-            <!-- <button class="search-btn"><i class="fas fa-search icon"></i></button>
-            <ul class="navbar-2">
-                <li class="lists-1"><a href="#">&#8448 Account</a></li>
-                <li class="lists-1"><a href="#"> &#9825 Wishlists</a></li>
-                <li class="lists-1"><a href="#">&#x1F6D2 Cart</a></li>
-            </ul> -->
         </div>
-        <!-- <div>
-            <nav class="dropdown">
-                <ul>
-                    <li class="dropdown-lists">Sale! &#x25BE</li>
-                    <li class="dropdown-lists">Trending &#x25BE</li>
-                    <li class="dropdown-lists">Topwear &#x25BE</li>
-                    <li class="dropdown-lists">Bottomwear &#x25BE</li>
-                    <li class="dropdown-lists">Bags &#x25BE</li>
-                    <li class="dropdown-lists">Watches &#x25BE</li>
-                    <li class="dropdown-lists">Skincare &#x25BE</li>
-                    <li class="dropdown-lists">Infants &#x25BE</li>
-                </ul>
-            </nav>
-        </div> -->
-    </div>
+    </div>  -->
     <div class="carousel-container">
         <div class="carousel">
             <img src="/images/slide-1.webp" alt="Image 1" class="img">
@@ -367,7 +351,7 @@
             </div>
         </div>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         <div class="first-bar">
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -488,10 +472,11 @@
             </div>
         </div>
 
+  
 
 
-
-    </div>
+    </div>-->
+    <!-- <footer data-th-replace="~{fragment/common :: footer}"></footer> -->
 
     <script>
         const nextBtn = document.querySelector('.next-btn');
@@ -528,4 +513,4 @@
     </script>
 </body>
 
-</html>
+</html> 
