--- a/src/main/resources/templates/customer/plp.html
+++ b/src/main/resources/templates/customer/plp.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head>
+<!-- <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Landing Page</title>
     <link rel="stylesheet" href="/style/plp.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-</head>
+</head> -->
+
+<head data-th-replace="~{fragment/common :: head}"></head>
 
 <body>
+    <link rel="stylesheet" href="/style/plp.css">
     <div class="nav-content">
-        <div class="navbar">
+        <!-- <div class="navbar">
             <div class="logo">
                 <a href="#"><img src="/images/logo.png" alt="logo" class="logo-img"></a>
             </div>
@@ -34,8 +37,8 @@
                 <li class="lists-1"><a href="#"> &#9825 Wishlists</a></li>
                 <li class="lists-1"><a href="http://localhost:1211/customer/cart">&#x1F6D2 Cart</a></li>
             </ul>
-        </div>
-
+        </div> -->
+        <nav data-th-replace="~{fragment/common :: nav}"></nav>
         <div class="container">
             <div class="filter">
                 <h2 class="head-filter">Filters</h2>
@@ -44,8 +47,7 @@
 
             <div class="categories">
                 <h5 class="categories-heading">Categories</h5>
-                <p>&#x23F4 Categories and Accessories
-                <p>
+                <p>&#x23F4 Categories and Accessories</p>
                 <p>&#x23F4 Topwear</p>
                 <hr>
             </div>
@@ -102,9 +104,10 @@
                         <button class="card-btn">Add to Wishlist</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand" ></h2>
-                        <p class="product-short-description" th:text="${product.productTitle}">A short line about the product</p>
-                        <span class="price" >$20</span>
+                        <h2 class="product-brand"></h2>
+                        <p class="product-short-description" th:text="${product.productTitle}">A short line about the
+                            product</p>
+                        <span class="price">$20</span>
                         <span class="actual-price">$40</span>
                     </div>
                 </div>
