--- a/src/main/resources/templates/customer/plp.html
+++ b/src/main/resources/templates/customer/plp.html
@@ -237,4 +237,4 @@
         </div>
 </body>
 
-</html>
+</html>0....................................................00000000000000000000000000000000
