--- a/src/main/resources/templates/customer/admin.html
+++ b/src/main/resources/templates/customer/admin.html
@@ -34,7 +34,6 @@
                 <tablehead>
                     <tr>
                         <th>ID</th>
-                        <th>Category</th>
                         <th>Product</th>
                         <th>Price</th>
                         <th>Stock</th>
@@ -42,25 +41,26 @@
                     </tr>
                     </thead>
                     <tablebody>
-                        <tr>
-                            <td>1</td>
-                            <td class="td">Men</td>
-                            <td>T-Shirt</td>
-                            <td class="td">$20</td>
-                            <td class="td">65</td>
+                        <tr data-th-each="product:${products}">
+                            <td data-th-text="${product.productId}"></td>
+                            <td data-th-text="${product.productTitle}"></td>
+                            <td class="td" data-th-text="${product.productPrice}">$20</td>
+                            <td class="td" data-th-text="${product.productStockQuantity}">65</td>
                             <td class="td">
-                                <button class="button" id="editbutton1">Edit</button> 
-                                <button class="button">Delete</button></td>
+                                <button class="button" id="editbutton1">Edit</button>
+                                <button class="button">Delete</button>
+                            </td>
                         </tr>
-                        <tr>
+                        <!-- <tr>
                             <td>2</td>
                             <td class="td">Women</td>
                             <td class="td">Jeans</td>
                             <td class="td">$40</td>
                             <td class="td">30</td>
                             <td class="td">
-                                <button class="button" id="editbutton2">Edit</button> 
-                                <button class="button">Delete</button></td>
+                                <button class="button" id="editbutton2">Edit</button>
+                                <button class="button">Delete</button>
+                            </td>
                         </tr>
                         <tr>
                             <td>3</td>
@@ -69,8 +69,9 @@
                             <td class="td">$60</td>
                             <td class="td">55</td>
                             <td class="td">
-                                <button class="button" id="editbutton3">Edit</button> 
-                                <button class="button">Delete</button></td>
+                                <button class="button" id="editbutton3">Edit</button>
+                                <button class="button">Delete</button>
+                            </td>
                         </tr>
                         <tr>
                             <td>4</td>
@@ -79,16 +80,16 @@
                             <td class="td">$70</td>
                             <td class="td">45</td>
                             <td class="td">
-                                <button class="button" id="editbutton4">Edit</button> 
+                                <button class="button" id="editbutton4">Edit</button>
                                 <button class="button" id="deletebutton">Delete</button>
                             </td>
-                        </tr>
-                        </tbody>
+                        </tr> -->
+                    </tablebody>
             </table>
         </main>
     </div>
 
-    <form  id="form">
+    <form id="form">
         <div id="container">
             <div class="addCategory">
                 <label for="addCategory">Add Category</label>
@@ -112,10 +113,10 @@
             <div>
                 <button id="button1">Submit</button>
             </div>
-            </div>
+        </div>
         </div>
     </form>
-    
+
     <script src="/JavaScript/admin.js"></script>
 </body>
 
