--- a/src/main/resources/templates/customer/plp.html
+++ b/src/main/resources/templates/customer/plp.html
@@ -97,6 +97,7 @@
             <h1 class="product-head">Mens Top-Wears</h1>
             <div class="product-container">
                 <div class="product-card" data-th-each="product : ${category.products}">
+                 <a data-th-href="|/customer/product/pdp?product=${product. productId}|">
                     <div class="product-image">
                         <span class="discount-tag">50% off</span>
                         <img src="https://rukminim2.flixcart.com/image/612/612/xif0q/shirt/l/p/g/xl-mens-staylist-chex-shirt-dbex-original-imah3hj4wgjq98dz.jpeg?q=70"
@@ -110,13 +111,14 @@
                         <span class="price">$20</span>
                         <span class="actual-price">$40</span>
                     </div>
+                 </a>
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div class="footer">
+     <!-- <div class="footer"> 
         <div class="first-bar">
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -237,4 +239,7 @@
         </div>
 </body>
 
-</html>0....................................................00000000000000000000000000000000
+</html>0....................................................00000000000000000000000000000000 -->
+
+<footer data-th-replace="~{fragment/common :: footer
+}"></footer>
