fragments, search bar data binding

--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -472,8 +472,7 @@
 
 
     </div> -->
-    <footer data-th-replace="~{fragment/common :: footer
-    }"></footer>
+    <footer data-th-replace="~{fragment/common :: footer}"></footer>
 
     <script src="/JavaScript/admin.js"></script>
 </body>
