--- a/src/main/resources/templates/customer/product.html
+++ b/src/main/resources/templates/customer/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style/admin.css">
+    <link rel="stylesheet" href="/style/product.css">
 </head>
 
 <body>
@@ -13,9 +13,9 @@
         <aside class="sidebar">
             <h1>Fashin Admin</h1>
             <ul>
-                <li><a href="#">Dashboard</a></li>
+                <li><a href="http://localhost:1211/customer/admin">Dashboard</a></li>
                 <li><a href="#">Orders</a></li>
-                <li><a href="http://localhost:1211/customer/product">Products</a></li>
+                <li><a href="#">Products</a></li>
                 <li><a href="#">Category</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Logout</a></li>
@@ -30,6 +30,7 @@
                 <div class="card">Users: <span>500</span></div>
             </div>
             <h2>Manage Products</h2>
+            <button id="addproductbtn">Add Product</button>
             <table>
                 <tablehead>
                     <tr>
