dashboard page updated

--- a/src/main/resources/templates/customer/admin.html
+++ b/src/main/resources/templates/customer/admin.html
@@ -13,10 +13,10 @@
         <aside class="sidebar">
             <h1>Fashin Admin</h1>
             <ul>
-                <li><a href="#">Dashboard</a></li>
+                <li><a href="http://localhost:1211/customer/admin">Dashboard</a></li>
                 <li><a href="#">Orders</a></li>
                 <li><a href="http://localhost:1211/customer/product">Products</a></li>
-                <li><a href="#">Category</a></li>
+                <li><a href="http://localhost:1211/customer/category">Category</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
@@ -83,6 +83,7 @@
         </div>
         </div>
     </form>
+
 </body>
 
 </html>
