--- a/src/main/resources/templates/customer/category.html
+++ b/src/main/resources/templates/customer/category.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="http://localhost:1211/customer/admin">Dashboard</a></li>
                 <li><a href="#">Orders</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="http://localhost:1211/customer/product">Products</a></li>
                 <li><a href="#">Category</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Logout</a></li>
@@ -36,6 +36,7 @@
                     <tr>
                         <th>Category ID</th>
                         <th>Category</th>
+                        <th>Images</th>
                         <th>Price</th>
                         <th>Stock</th>
                         <th>Action</th>
@@ -45,6 +46,7 @@
                         <tr data-th-each="product:${products}">
                             <td data-th-text="${product.productId}"></td>
                             <td data-th-text="${product.productTitle}"></td>
+                            <td><img data-th-src="${product.productImageUrl}" alt="Product Image" width="50"></td>
                             <td class="td" data-th-text="${product.productPrice}">$20</td>
                             <td class="td" data-th-text="${product.productStockQuantity}">65</td>
                             <td class="td">
@@ -84,6 +86,50 @@
         </div>
         </div>
     </form>
+
+    <div class="popup-overlay" id="popupOverlay">
+        <div class="popup">
+            <h2>Add Product</h2>
+            <label for="productName">Category Name:</label>
+            <input type="text" placeholder="Category Name">
+
+            <label for="productId">Category ID:</label>
+            <input type="text" placeholder="Category ID">
+
+            <label for="productId">Category Price:</label>
+            <input type="text" placeholder="Category Price">
+
+            <label for="productDescription">Category Description:</label>
+            <textarea placeholder="Category Description"></textarea>
+
+            <label for="productImage">Category Image:</label>
+            <input type="file" accept="image/*">
+
+            <button id="submit-button">Submit</button>
+            <button class="close-btn" id="closebtn">Close</button>
+        </div>
+    </div>
+
+<script>
+    let displayDiv=document.getElementById("popupOverlay");
+    let closeButton=document.getElementById("closebtn");
+    let submitButton=document.getElementById("submit-button");
+    let button=document.getElementById("addproductbtn");
+    button.addEventListener('click',()=>{
+        displayDiv.style.display="flex";
+    });
+
+    closeButton.addEventListener('click',()=>{
+        displayDiv.style.display="none";
+    });
+
+    submitButton.addEventListener('click',()=>{
+        displayDiv.style.display="none";
+        alert("Product added successfully!");
+    })
+</script>
+
+
 </body>
 
 </html>
